--- a/ArsaRExCH/Components/MyComponents/AllTradesHere.razor
+++ b/ArsaRExCH/Components/MyComponents/AllTradesHere.razor
@@ -11,9 +11,9 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>User ID</th>
-                <th>Symbol</th>
-            <th>SymbolII</th>
+                <th> ID</th>
+                <th>BTC</th>
+            <th>USDT</th>
                 <th>Date</th>
             </tr>
         </thead>
