--- a/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
+++ b/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
@@ -14,7 +14,7 @@
         <ArsaRExCH.Components.Chartss.TradingViewChart></ArsaRExCH.Components.Chartss.TradingViewChart>
     </div>
 
-    <div id="additional-content" style="flex: 0 0 30%; height: 400px; background-color: lightblue">
+    <div id="additional-content" style="flex: 0 0 30%; height: 400px; background-color: white">
         <AllTradesHere></AllTradesHere>
     </div>
 </div>
@@ -131,7 +131,7 @@
                 dateTime = DateTime.Now,
                 symbolI = tradeModel.symbolI,
                 SymbolII = EstimatedUsdtToGetInCludeFee,
-                TradeFee = feeFromDbCall,
+                TradeFee = feeFromDbCall,//TODO edit echange wallet 
                 IsMarketBuy = true,
                 IsTradeDone = false,
                 MyProperty = "sdsdsd",
