--- a/ArsaRExCH/Components/Pages/AdminPanel.razor
+++ b/ArsaRExCH/Components/Pages/AdminPanel.razor
@@ -68,7 +68,7 @@ else
     private string[] links = new string[]
     {
         "BannedCountry", "UserInformation", "Add Pair", "BetListAdmin", "RoleManagerAdmin",
-        "AirDropFaq", "AdminPost", "PoolAdmin", "BitcoinPoolOneUsers", "/page10",
+        "AirDropFaq", "AdminPost", "PoolAdmin", "BitcoinPoolOneUsers", "/SetupExchangeWallet",
         "/page11", "/page12", "/page13", "/page14", "/page15"
     };
 
