--- a/ArsaRExCH/Components/Pages/SetupExchangeWallet.razor
+++ b/ArsaRExCH/Components/Pages/SetupExchangeWallet.razor
@@ -8,7 +8,7 @@
 @inject NavigationManager NavigationManager
 @inject ArsaRExCH.Interface.AdministrationInterface _adminInterface
 @attribute [Authorize]
-
+<p>@ErrorMessage</p>
 @code {
     public string user2 { get; set; }
     private bool isAdminSetupComplete = false;
@@ -29,9 +29,11 @@
                 user2 = user5.Id; // Get the user ID here
                 Console.WriteLine(user5.Id);
                 var x = await _adminInterface.CheckAdminSetupStatusAsync();
-                if (x==false)
+                if (!x)
                 {
-                    NavigationManager.NavigateTo("/");
+                    ErrorMessage = "Admin Setup Already Done one time, AdminSetup Only accassable when exchange initialized ";
+                    await Task.Delay(5000);
+                  // NavigationManager.NavigateTo("/");
                 }
 
                 // Retrieve ClaimsPrincipal directly from HttpContext
@@ -39,7 +41,7 @@
 
                 // Assuming you want to check for admin setup
                 isAdminSetupComplete = await _adminInterface.CheckAdminSetupStatusAsync();
-
+            
                 // Get roles and check if "Admin" is among them
                 var userRoles = await _adminInterface.GetUserRolesAsync(userClaimsPrincipal);
                 isAdmin = userRoles.Contains("Admin");
