--- a/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
+++ b/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
@@ -134,7 +134,7 @@
                 SymbolII = EstimatedUsdtToGetInCludeFee,
                 TradeFee = feeFromDbCall,//TODO edit echange wallet 
                 IsMarketBuy = true,
-                IsTradeDone = false,
+                IsTradeDone = true,
                 MyProperty = "sdsdsd",
                 ApplicationUserId = user2,
                 /*hardcode pool - A CALL TO DB NEED*/
