--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -125,7 +125,7 @@
             </div>
 
             <div class="component-wrapper">
-                <ArsaRExCH.Components.Pages.BtcPrice />
+              <!---  <ArsaRExCH.Components.Pages.BtcPrice />-->
             </div>
         </div>
 
